fix dark mode color organization
- Group color variables properly (very-light + light for each color)
- Remove redundant --color-tag-* overrides (base colors don't change)
- Keep only --color-tag-grey override (uses text-secondary in dark mode)
- Add missing --color-very-light-grey in dark mode

--- a/extension/scss/common.scss
+++ b/extension/scss/common.scss
@@ -218,28 +218,40 @@ html.anytypeWebclipper-auth {
 		--color-bg-primary: #171717;
 		--color-bg-loader: rgba(0,0,0,0.7);
 
+		/* Color */
+
+		--color-very-light-yellow: #242317;
+		--color-light-yellow: #55500d;
+
+		--color-very-light-orange: #262117;
+		--color-light-orange: #5f430a;
+
+		--color-very-light-red: #2d1d18;
+		--color-light-red: #74321e;
+
+		--color-very-light-pink: #2d1926;
+		--color-light-pink: #712055;
+
+		--color-very-light-purple: #281c2c;
+		--color-light-purple: #542663;
+
+		--color-very-light-blue: #1e2131;
+		--color-light-blue: #20295c;
+
+		--color-very-light-ice: #17252d;
+		--color-light-ice: #19465f;
+
+		--color-very-light-teal: #162827;
+		--color-light-teal: #16534e;
+
+		--color-very-light-lime: #202919;
+		--color-light-lime: #36551d;
+
+		--color-very-light-grey: #232323;
+		--color-light-grey: #3c3c3c;
+
 		/* Tag */
 		--color-tag-grey: var(--color-text-secondary);
-		--color-tag-yellow: var(--color-yellow);
-		--color-tag-orange: var(--color-orange);
-		--color-tag-red: var(--color-red);
-		--color-tag-pink: var(--color-pink);
-		--color-tag-purple: var(--color-purple);
-		--color-tag-blue: var(--color-blue);
-		--color-tag-ice: var(--color-ice);
-		--color-tag-teal: var(--color-teal);
-		--color-tag-lime: var(--color-lime);
-
-		--color-bg-tag-grey: #3c3c3c;
-		--color-bg-tag-yellow: #55500d;
-		--color-bg-tag-orange: #5f430a;
-		--color-bg-tag-red: #74321e;
-		--color-bg-tag-pink: #712055;
-		--color-bg-tag-purple: #542663;
-		--color-bg-tag-blue: #20295c;
-		--color-bg-tag-ice: #19465f;
-		--color-bg-tag-teal: #16534e;
-		--color-bg-tag-lime: #36551d;
 
 		/* System */
 		--color-system-selection: rgba(24, 163, 241, 0.3);
