--- a/src/scss/theme/dark/common.scss
+++ b/src/scss/theme/dark/common.scss
@@ -35,39 +35,42 @@ html.themeDark {
 	--color-bg-secondary: #191919;
 	--color-bg-loader: rgba(0,0,0,0.7);
 	--color-bg-grey: #232323;
+
+	/* Color */
+
 	--color-very-light-yellow: #242317;
+	--color-light-yellow: #55500d;
+
 	--color-very-light-orange: #262117;
+	--color-light-orange: #5f430a;
+
 	--color-very-light-red: #2d1d18;
+	--color-light-red: #74321e;
+
 	--color-very-light-pink: #2d1926;
+	--color-light-pink: #712055;
+
 	--color-very-light-purple: #281c2c;
+	--color-light-purple: #542663;
+
 	--color-very-light-blue: #1e2131;
+	--color-light-blue: #20295c;
+
 	--color-very-light-ice: #17252d;
+	--color-light-ice: #19465f;
+
 	--color-very-light-teal: #162827;
+	--color-light-teal: #16534e;
+
 	--color-very-light-lime: #202919;
+	--color-light-lime: #36551d;
+
+	--color-very-light-grey: #232323;
+	--color-light-grey: #3c3c3c;
 
 	/* Tag */
 
 	--color-tag-grey: var(--color-text-secondary);
-	--color-tag-yellow: var(--color-yellow);
-	--color-tag-orange: var(--color-orange);
-	--color-tag-red: var(--color-red);
-	--color-tag-pink: var(--color-pink);
-	--color-tag-purple: var(--color-purple);
-	--color-tag-blue: var(--color-blue);
-	--color-tag-ice: var(--color-ice);
-	--color-tag-teal: var(--color-teal);
-	--color-tag-lime: var(--color-lime);
-
-	--color-light-grey: #3c3c3c;
-	--color-light-yellow: #55500d;
-	--color-light-orange: #5f430a;
-	--color-light-red: #74321e;
-	--color-light-pink: #712055;
-	--color-light-purple: #542663;
-	--color-light-blue: #20295c;
-	--color-light-ice: #19465f;
-	--color-light-teal: #16534e;
-	--color-light-lime: #36551d;
 
 	/* System */
 
